hphp/test/zend/bad/ext/gd/tests/imagecharup_error1.php
<?php

$result = imagecharup('string', 1, 5, 5, 'C', 1);

?>